--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
     "@primevue/themes": "^4.3.7",
+    "@vueuse/core": "^13.9.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "primeicons": "^7.0.0",
