--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@primeuix/themes": "^1.2.3",
     "@primevue/themes": "^4.3.7",
     "@vueuse/core": "^13.9.0",
+    "axios": "^1.11.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "primeicons": "^7.0.0",
